<resources>
    <string name="app_name">T-CashSales</string>
    <string name="menu_home">menu_home</string>
    <string name="menu_pay">menu_pay</string>
    <string name="menu_video">menu_video</string>
    <string name="menu_bill">menu_bill</string>
    <string name="menu_title">menu_title</string>
    <string name="login">Anmelden</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="forgotpass">Passwort vergessen?</string>
    <string name="hint001">Sollten Sie noch nicht über Logindaten</string>
    <string name="hint002">bzw. ein Benutzerkonto verfügen,</string>
    <string name="hint003">können Sie sich</string>
    <string name="hint004">hier</string>
    <string name="hint005">registrieren.</string>
    <string name="creditbalance">Aktuelles Guthaben </string>
    <string name="topup_amount">13.49</string>
    <string name="welcome">Wilkommen</string>
    <string name="login_user">Apostolis Demseris</string>
    <string name="exclamation_point">!</string>
    <string name="last_seen">Zuletzt gesehen</string>
    <string name="movie_recommendation">Film Empfehlungen</string>
    <string name="music_recommendation">Musik Empfehlungen</string>
    <string name="movie000">Movie000</string>
    <string name="movie001">Movie001</string>
    <string name="music000">Music000</string>
    <string name="rentMovie">Mieten (24h) für 2,49€</string>
    <string name="buyMovie">Kaufen für 12,99€</string>
    <string name="riddick4">Trailer - Riddick 4</string>
    <string name="invoiceOverview">Rechnungsübersicht</string>
    <string name="payBill">Rechnung zahlen</string>
    <string name="enterInvoiceNumber">Rechnungsnummer eingeben</string>
    <string name="bill000">Rechnung</string>
    <string name="bill001">R-10126</string>
    <string name="bill002">R-10125</string>
    <string name="bill003">R-10124</string>
    <string name="bill004">R-10123</string>
    <string name="bill005">R-10122</string>
    <string name="date000">Datum</string>
    <string name="date001">01.06.2017</string>
    <string name="date002">01.05.2017</string>
    <string name="date003">01.04.2017</string>
    <string name="date004">01.03.2017</string>
    <string name="date005">01.02.2017</string>
    <string name="state000">Status</string>
    <string name="state001">offen</string>
    <string name="state002">bezahlt</string>
    <string name="payNow">Jetzt bezahlen</string>
    <string name="topup">Guthaben aufladen</string>
    <string name="qrcode_scan">QR-Code scannen</string>
    <string name="toppingUpNumberInput">16-Stellige Aufladenummer eingeben</string>
    <string name="toppingUpButton">Aufladen</string>
    <string name="or">oder</string>
    <string name="qrcode">qrcode</string>
    <string name="instr000">Bei Schwierigkeiten schauen Sie in unserer</string>
    <string name="instr001">FAQ-Liste</string>
    <string name="instr002">nach Lösungsvorschlägen oder</string>
    <string name="instr003">melden Sie sich per</string>
    <string name="instr004">Kontaktformular</string>
    <string name="loginButton">Einloggen</string>
    <string name="loginHint000">Sollten Sie noch nicht über Logindaten</string>
    <string name="loginHint001">bzw. ein Benutzerkonto verfügen,</string>
    <string name="loginHint002">können Sie sich</string>
    <string name="loginHint003">hier</string>
    <string name="loginHint004">registrieren</string>
    <string name="youtube_video">youtube_video</string>
    <string name="youtube">youtube</string>
    <string name="menu_app">menu_app</string>
    <string name="logout">logout</string>
    <string name="search">search</string>
    <string name="currency_euro">€</string>
    <string name="videos">Videos</string>
    <string name="back">Zurück</string>
    <string name="trailer_it">Trailer - Stephen Kings Es (2017)</string>
    <string name="trailer_bigbangtheorie">Trailer - The Big Bang Theory - Die 8. Staffel</string>
    <string name="trailer_despicableme3">Trailer - Ich einfach unverbesserlich 3</string>
    <string name="trailer_bully">Trailer  -  Die Bullyparade - Der Film</string>
    <string name="trailer_hobbit">Trailer  -  Der Hobbit</string>
    <string name="app">App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
