<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fdai3744.t_online20.PayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="15dp"
            android:text="@string/topup" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:text="@string/qrcode_scan" />

        <ImageView
            android:id="@+id/qrbutton"
            android:layout_width="253dp"
            android:layout_height="256dp"
            android:src="@drawable/qrcode"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/qrcode" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/or" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:labelFor="@+id/editInvoiceNumber_bill"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/toppingUpNumberInput" />

        <EditText
            android:id="@+id/editInvoiceNumber_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/edittextstyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:inputType="number" />

        <Button
            android:id="@+id/topupbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="27sp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttonstyle"
            style="@style/ButtonStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/toppingUpButton" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/instr000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                android:text="@string/instr001" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/instr002" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:text="@string/instr003" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/instr004" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
